--- a/app/src/main/res/layout/row_filter_s_list.xml
+++ b/app/src/main/res/layout/row_filter_s_list.xml
@@ -10,7 +10,7 @@
     android:id="@+id/container">
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="260dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
@@ -60,7 +60,7 @@
 
     <LinearLayout
 
-        android:layout_width="100dp"
+        android:layout_width="140dp"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
@@ -71,6 +71,7 @@
             android:layout_width="wrap_content"
             android:textSize="15sp"
             android:textAllCaps="false"
+            android:text="Update/View details"
             android:textColor="@color/grey"
             style="?android:attr/borderlessButtonStyle"/>
     </LinearLayout>
