--- a/app/src/main/res/layout/row_filter_s_list.xml
+++ b/app/src/main/res/layout/row_filter_s_list.xml
@@ -32,9 +32,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="3"
-            android:text="How to read a book"
+            android:text="Book"
             android:textColor="@color/black"
-            android:textSize="19sp" />
+            android:textSize="17sp" />
         </LinearLayout>
 
     <TextView
